--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Xbomber is the pioneer of sms and call bombers in Bangladesh. For a long time, this was a closed source project. But we (Team X 1337) have decided to make it open source so that everyone can gain knowledge from this project and create their own project from this github template.">
-  <title>XBOMBER | Community Edition</title>
+  <title>TG BOOMER | TAZIM GAMING</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -19,7 +19,7 @@
         <div class="form form-container">
           <div class="form-group">
             <h1 class="text-center font-weight-bold header">
-              <i class="bi bi-emoji-heart-eyes"></i> XBOMBER <i class="bi bi-emoji-heart-eyes-fill"></i>
+              <i class="bi bi-emoji-heart-eyes"></i> TG BOMBER <i class="bi bi-emoji-heart-eyes-fill"></i>
             </h1>
             <p class="credit text-muted"><small>FROM</small> <span class="fw-bold">TEAM X 1337</span></p>
             <p class="notice">
@@ -54,7 +54,7 @@
           <hr>
           <div class="footer-copyright text-center py-3" align="center">
             <small class="text-muted" style="color: white !important">MADE WITH <i class="bi bi-heart"
-                style="color:red !important"></i> BY <b>SowmikSudo</b></small>
+                style="color:red !important"></i> BY <b>TAZIM GAMING</b></small>
             <br><br>
             <button class="btn btn-outline-primary"
               onclick="document.location='https://t.me/ign0r3dh4x0r'">
